# tagger

./: .gitignore  README.md  credentials.json  detect_text.py  dump.rdb  evernote_client.py  evernote_patch.py  google_auth.py  googlecreds.json  interactive.py  last_run.p  main.py  manage.py  note.py  notion_client.py  ocr_cache.p  pyproject.toml  tasks.py  test_functional.py  tests.py  tgr.py  token.pickle  ui.py
app/: __init__.py  adapters.py  app.py  app1.py  celery_app.py  config.py  db.py  local_files.py  manage.py  models.py  note.py  note_writter.py  ocr.py  schemas.py  utils.py
app/evernote/: __init__.py  evernote_utils.py  routes.py  utils.py
app/gdrive/: __init__.py  drive_folder.py  routes.py  sync_gdrive_folder.py  utils.py
app/google_login/: __init__.py  routes.py
app/main/: __init__.py  routes.py  tasks.py
app/migrations/versions/: 4de6f1609c88_.py  e123256f30f8_.py
cli-prototype/: evernote_client.py  note.py
cli_prototype/: evernote_client.py  last_run.p
migrations/versions/: 1e7876bb02ac_.py  3f1fe36deab4_.py  410764ffe43e_.py  488ed23f4cdb_.py  544a92897669_.py  5a51d5f862b3_.py  6210895f4869_.py  74d6f349ce33_.py  7c22f79a5358_.py  869ceeca2110_.py  a3386fcd304c_.py  b65f13b0ab29_.py  bff77a32749c_.py  d96e2808bd19_.py  dac5e215af6c_.py
tagger-frontend/: package-lock.json  package.json
tagger-frontend/public/: index.html
tagger-frontend/src/: App.css  App.js  index.css
tagger-frontend/src/components/: Dashboard.js  LandingJumbo.js  Nav.js
tests/: conftest.py  test_functional.py
