[tool.poetry]
name = "neonotes"
version = "0.1.0"
description = ""
authors = ["serg-e <smosesov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-vision = "^1.0.0"
pdf2image = "^1.13.1"
notion = "^0.0.25"
jupyter = "^1.0.0"
google-api-python-client = "^1.8.3"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
grpcio = "^1.29.0"
pillow = "^7.1.2"
argparse = "^1.4.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
